external-access/external-access-argocd/dev/ingressroute-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  routes:
    - match: Host(`argocd.192.168.0.13.xip.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-tls
spec:
  routes:
    - match: Host(`argocd.192.168.0.13.xip.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
